<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  xmlns:android="http://schemas.android.com/apk/res/android">
  <TextView
    android:id="@+id/projectText"
    android:layout_width="match_parent"
    android:layout_height="45dp"
    android:gravity="center"
    android:text="@string/project" />
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
      android:id="@+id/wordCountText"
      android:layout_width="168dp"
      android:layout_height="25dp"
      android:layout_marginStart="25dp"
      android:gravity="start"
      android:text="@string/word_count_goal" />
    <TextView
      android:id="@+id/textView26"
      android:layout_width="match_parent"
      android:layout_height="25dp"
      android:gravity="center"
      android:text="TextView" />
  </LinearLayout>
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
      android:id="@+id/deadlineText"
      android:layout_width="168dp"
      android:layout_height="25dp"
      android:layout_marginStart="25dp"
      android:gravity="start"
      android:text="@string/deadline" />
    <TextView
      android:id="@+id/textView27"
      android:layout_width="match_parent"
      android:layout_height="25dp"
      android:gravity="center"
      android:text="TextView" />
  </LinearLayout>
  <TextView
    android:id="@+id/progressText"
    android:layout_width="match_parent"
    android:layout_height="35dp"
    android:paddingBottom="10dp"
    android:layout_marginStart="0dp"
    android:gravity="center"
    android:text="@string/progress" />
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
      android:id="@+id/wordsWritten"
      android:layout_width="match_parent"
      android:layout_height="30dp"
      android:layout_weight="1"
      android:layout_marginStart="25dp"
      android:paddingTop="5dp"
      android:paddingBottom="5dp"
      android:text="@string/words_written" />
    <TextView
      android:id="@+id/textView36"
      android:layout_width="match_parent"
      android:layout_height="30dp"
      android:layout_weight="1"
      android:paddingTop="5dp"
      android:paddingBottom="5dp"
      android:gravity="center"
      android:text="TextView" />
  </LinearLayout>
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
      android:id="@+id/wordsRemaining"
      android:layout_width="match_parent"
      android:layout_height="30dp"
      android:layout_weight="1"
      android:layout_marginStart="25dp"
      android:paddingTop="5dp"
      android:paddingBottom="5dp"
      android:text="@string/words_remaining" />
    <TextView
      android:id="@+id/textView34"
      android:layout_width="match_parent"
      android:layout_height="30dp"
      android:layout_weight="1"
      android:paddingTop="5dp"
      android:paddingBottom="5dp"
      android:gravity="center"
      android:text="TextView" />
  </LinearLayout>
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
      android:id="@+id/advisedDailyGoal"
      android:layout_width="match_parent"
      android:layout_height="30dp"
      android:layout_weight="1"
      android:layout_marginStart="25dp"
      android:paddingTop="5dp"
      android:paddingBottom="5dp"
      android:text="@string/advised_daily_goal" />
    <TextView
      android:id="@+id/textView32"
      android:layout_width="match_parent"
      android:layout_height="30dp"
      android:layout_weight="1"
      android:paddingTop="5dp"
      android:paddingBottom="5dp"
      android:gravity="center"
      android:text="TextView" />

  </LinearLayout>
  <TextView
    android:id="@+id/textView5"
    android:layout_width="148dp"
    android:layout_height="wrap_content"
    android:text="Word Count for Today" />
  <EditText
    android:id="@+id/editText"
    android:layout_width="165dp"
    android:layout_height="wrap_content"
    android:ems="10"
    android:inputType="textPersonName"
    android:text=" " />
  <Button
    android:id="@+id/button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Update" />
  <TextView
    android:id="@+id/textView6"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="Notifications" />
  <RadioButton
    android:id="@+id/radioButton2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="On" />
  <RadioButton
    android:id="@+id/radioButton3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Off" />

</LinearLayout>
